migrate activator template to giter8